--- a/templates/index.html
+++ b/templates/index.html
@@ -247,7 +247,7 @@ I’m a final-year B.Tech IT student with a strong interest in Machine Learning,
           </div>
         </div>
         <div class="flip-card-back">
-          <img src="/static/images/simats_hackathon.jpg" alt="SIMATS Hackathon" class="img-fluid rounded">
+          <img src="static/images/ieee_conf.jpg" alt="SIMATS Hackathon" class="img-fluid rounded">
         </div>
       </div>
     </div>
@@ -289,7 +289,7 @@ I’m a final-year B.Tech IT student with a strong interest in Machine Learning,
           </div>
         </div>
         <div class="flip-card-back">
-          <img src="/static/images/ieee_conf.jpg" alt="IEEE Conference" class="img-fluid rounded">
+          <img src="static/images/simats_hackathon.jpg" alt="IEEE Conference" class="img-fluid rounded">
         </div>
       </div>
     </div>
