--- a/templates/index.html
+++ b/templates/index.html
@@ -303,8 +303,8 @@ I’m a final-year B.Tech IT student with a strong interest in Machine Learning,
   <!-- Footer -->
 <footer class="site-footer" id="contact">
   <div class="footer-content">
-    <p><strong>📧 Email:</strong> <a href="#">aldrinlijo2004@gmail.com</a></p>
-          <p><strong>📞 Mobile:</strong> <a href="#">7598715213</a></p>
+    <p><strong>📧 Email:</strong> <a href="mailto:aldrinlijo2004@gmail.com">aldrinlijo2004@gmail.com</a></p>
+          <p><strong>📞 Mobile:</strong> <a href="tel:+91 7598715213">7598715213</a></p>
 
     <p> <a href="https://www.linkedin.com/in/aldrin-lijo" target="_blank">💼 LinkedIn</a><strong>|</strong><a href="https://github.com/ALDRIN1704" target="_blank">🌐 GitHub</a></p>
   </div>
