--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
 
 
 <div class="resume-download">
-  <a href="{{ url_for('download_resume') }}" class="btn-outline-red">
+  <a href="{{ url_for('/asserts/aldrinCV.pdf') }}" class="btn-outline-red">
     📄 Download Resume
   </a>
 </div>
@@ -185,7 +185,7 @@ I’m a final-year B.Tech IT student with a strong interest in Machine Learning,
     <div class="info-card-1">
       <h4 class="text-danger">Alpha Ori Technologies</h4>
       <p><strong>Role:</strong> Software Engineer Intern</p>
-      <p><strong>Duration:</strong> Final Semester</p>
+      <p><strong>Duration:</strong> 1 Month</p>
       <p><strong>Worked On:</strong> ML model development and software integration for maritime analytics.</p>
     </div>
 
