--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -24,7 +24,7 @@
           <a class="nav-link" href="#contact">Contact</a>
         </li>
         <li class="nav-item mt-2 mt-lg-0">
-          <a href="{{ url_for('static', filename='resume.pdf') }}" download class="btn btn-outline-red ms-lg-3">
+          <a href="{{ url_for('static', filename='aldrinCV.pdf') }}" download class="btn btn-outline-red ms-lg-3">
             📄 Download Resume
           </a>
         </li>
