--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
 
 
 <div class="resume-download">
-  <a href="{{ url_for('/asserts/aldrinCV.pdf') }}" class="btn-outline-red">
+  <a href="{{ url_for('static', filename='aldrinCV.pdf') }}" class="btn-outline-red">
     📄 Download Resume
   </a>
 </div>
